syntax = "proto3";

option csharp_namespace = "CShroudGateway.Presentation.DeprecatedApi.gRPC.v1.Protos";

package update;

service Update {
  rpc GetGlobalParams (GlobalParamsRequest) returns (UpdateBytes);
}

message GlobalParamsRequest {
  string currentHash = 1;
}

message GlobalParams {
  string ProjectName = 1;
  string KeyDomain = 2;
  string KeyNameFormat = 3;
}

message UpdateBytes {
  bytes data = 1;
}
